[tool.poetry]
name = "ping_stat"
version = "0.1.0"
description = ""
authors = ["Taylor B. <tayjaybabee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ping3 = "^4.0.4"
inspy-logger = "^2.2"
pypattyrn = "^1.2"
rich = "^13.3.5"
bokeh = "^3.1.1"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ptipython = "^1.0.1"


[tool.poetry.group.gui.dependencies]
pysimplegui = "^4.60.5"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
